--- a/OSDevGrp.OSIntranet.Tests/packages.config
+++ b/OSDevGrp.OSIntranet.Tests/packages.config
@@ -1,21 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="4.14.0" targetFramework="net472" />
-  <package id="AutoMapper" version="10.0.0" targetFramework="net472" />
-  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net46" />
+  <package id="AutoFixture" version="4.17.0" targetFramework="net472" />
+  <package id="AutoMapper" version="10.1.1" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="Fare" version="2.1.2" targetFramework="net46" />
-  <package id="Google.Protobuf" version="3.13.0" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.19.1" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.2.15" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.15" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net46" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net46" />
-  <package id="MySql.Data" version="8.0.21" targetFramework="net472" />
-  <package id="NUnit" version="3.12.0" targetFramework="net46" />
+  <package id="MySql.Data" version="8.0.27" targetFramework="net472" />
+  <package id="NUnit" version="3.13.2" targetFramework="net472" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
-  <package id="SSH.NET" version="2016.1.0" targetFramework="net46" />
+  <package id="SSH.NET" version="2020.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net46" requireReinstallation="true" />
   <package id="System.Memory" version="4.5.4" targetFramework="net46" requireReinstallation="true" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
