--- a/OSDevGrp.OSIntranet.Infrastructure/packages.config
+++ b/OSDevGrp.OSIntranet.Infrastructure/packages.config
@@ -2,15 +2,15 @@
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.19.1" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4" version="1.2.15" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4.Streams" version="1.2.15" targetFramework="net472" />
-  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net46" />
+  <package id="Google.Protobuf" version="3.21.2" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.2.16" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.16" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.7" targetFramework="net472" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net46" />
-  <package id="MySql.Data" version="8.0.27" targetFramework="net472" />
-  <package id="SSH.NET" version="2020.0.1" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.29" targetFramework="net472" />
+  <package id="SSH.NET" version="2020.0.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net46" requireReinstallation="true" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
